<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/hui"
              android:orientation="vertical">

    <include layout="@layout/titlebar"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

        <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/register_youraccount"
                android:textColor="#555"
                android:textSize="16sp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

            <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/sl_register_edittext"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textSize="16sp">
            </EditText>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/register_reenter_psdtext"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

            <EditText
                    android:id="@+id/et_password2"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/sl_register_edittext"
                    android:hint="@string/register_reenter_psdhint"
                    android:inputType="textPassword"
                    android:maxLength="32"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textSize="16sp">
            </EditText>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:visibility="gone">

            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/register_code"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

            <EditText
                    android:id="@+id/et_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sl_register_edittext"
                    android:hint="@string/verification_code_hint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textSize="16sp">
            </EditText>
        </LinearLayout>

        <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/green_bt"
                android:text="@string/register_submit"
                android:textColor="@color/white"
                android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>