<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/hui"
              android:orientation="vertical">

    <include layout="@layout/titlebar"/>

    <LinearLayout
            android:id="@+id/contactitem_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingTop="20dp">

        <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:src="@drawable/icon"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:orientation="vertical"
                android:paddingLeft="10dip">

            <TextView
                    android:id="@+id/tv_nick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/settings_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

            <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/settings_account"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/preference_single_item"
            android:gravity="center_vertical"
            android:padding="10dp">

        <TextView
                android:id="@+id/textView1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_area"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_area_hint"
                android:textColor="@color/black"
                android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/preference_single_item"
            android:gravity="center_vertical"
            android:padding="10dp">

        <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_sign"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/tv_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/not_filled"
                android:textColor="@color/black"
                android:textSize="16sp"/>
    </LinearLayout>

    <Button
            android:id="@+id/btn_addfriend"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/green_bt"
            android:text="加好友"
            android:textColor="@color/white"
            android:textSize="20sp"/>

</LinearLayout>