<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/hui"
              android:orientation="vertical">

    <include layout="@layout/titlebar"/>

    <LinearLayout
            android:id="@+id/contactitem_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingTop="20dp">

        <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:src="@drawable/icon_department_member"
                tools:ignore="ContentDescription"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:orientation="vertical"
                android:paddingLeft="10dip">

            <TextView
                    android:id="@+id/tv_nick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/settings_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="NestedWeights"/>

            <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/settings_account"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:background="@drawable/preference_single_item">

        <TextView
                android:id="@+id/tv_phonenum"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/tv_phone"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/not_filled"
                android:textSize="16sp"/>

        <Button
                android:id="@+id/btn_phone"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_phone"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/preference_single_item"
            android:gravity="center_vertical">

        <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_email"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/not_filled"
                android:textColor="@color/black"
                android:textSize="16sp"/>
    </LinearLayout>

    <Button
            android:id="@+id/friend_detail_send_message"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/green_bt"
            android:text="@string/sendmsg"
            android:textColor="@color/white"
            android:textSize="20sp"/>

</LinearLayout>