<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="300dp"
              android:layout_height="wrap_content"
              android:background="@drawable/bg_dialogactivity"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:padding="20dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_sex"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    <RelativeLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_male"
                android:textColor="@color/black"
                android:textSize="18sp"/>

        <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:button="@drawable/sl_radio"
                android:tag="@string/settings_male"/>
    </RelativeLayout>

    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/line_message_list_division"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/settings_female"
                android:textColor="@color/black"
                android:textSize="18sp"/>

        <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:button="@drawable/sl_radio"
                android:tag="@string/settings_female"/>
    </RelativeLayout>

    <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_bt"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/settings_btn_ok"
            android:textColor="@color/white"
            android:textSize="20sp"/>

</LinearLayout>